--- a/index.html
+++ b/index.html
@@ -284,6 +284,20 @@
               </div>
             </div>
 
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/map.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Map</h3>
+                  <p class="card-text">
+                    STL container which <b class="important-point">store data in key value pair fashion where key will be unique and sorted in ascending</b> in nature.
+                  </p>
+                  <a class="btn" href="map.html">Practice Question <i class="fa fa-arrow-right"
+                      aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
