added set container

--- a/index.html
+++ b/index.html
@@ -298,6 +298,20 @@
               </div>
             </div>
 
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/set.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Set</h3>
+                  <p class="card-text">
+                    The STL set container is a powerful data structure in C++ that stores a collection of <b class="important-point">unique elements</b> in a <b class="important-point">sorted order</b>.
+                    It offers efficient insertion, deletion, and search operations.
+                  </p>
+                  <a class="btn" href="set.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
