adsense ad code in container page

--- a/array.html
+++ b/array.html
@@ -22,6 +22,10 @@
 
     <!-- SEO stuff end -->
 
+    <!-- adsense code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6755330354272694"
+        crossorigin="anonymous"></script>
+
     <!-- Title stuff -->
     <title>STL Sheet | Array Container - practice coding questions of C++ array container here, free</title>
 
