--- a/stack.html
+++ b/stack.html
@@ -19,6 +19,10 @@
     
     <link rel="canonical" href="https://binarymagic.in/stack.html">
     <!-- SEO stuff end -->
+
+    <!-- adsense code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6755330354272694"
+        crossorigin="anonymous"></script>
     
     <!-- Title stuff -->
     <title>STL Sheet | stack Container - practice coding questions of C++ stack container here, free</title>
