--- a/deque.html
+++ b/deque.html
@@ -21,6 +21,10 @@
     <link rel="canonical" href="https://binarymagic.in/deque.html">
     <!-- SEO stuff end -->
 
+    <!-- adsense code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6755330354272694"
+        crossorigin="anonymous"></script>
+
     <!-- Title stuff -->
     <title>STL Sheet | deque Container - practice coding questions of C++ deque container here, free</title>
 
